syntax = "proto3";

package protobuff;
option go_package = "gitlab.com/xbackend/buffers/protobuff";

message TokenClaims {
    string UserId = 1;
    string Role = 2;
    string ProjectId = 3;
}

message UserProject {
    string ProjectId = 1;
    repeated string Roles = 2;
}

message LoginRequest {
    string Username = 1;
    string Email = 2;
    string Secret = 3;
}

message RegisteredUsers {
    string Key = 1;
    string Name = 2;
    string Username = 3;
    string Email = 4;
    string Secret = 5;
    uint32 TokenRefreshVal = 6;
    repeated UserProject Accounts = 7;
    string Avatar = 8;
}

// data

message UserMeta {
    string Id = 1;
    string Avatar = 2;
    string Name = 3;
    string Role = 4;
}

message MetaField {
    string CreatedAt = 1;
    string UpdatedAt = 2;
    UserMeta CreatedBy = 3;
    UserMeta LastModifiedBy = 4;
}

// user project
message Project {
    string Key = 1; //exclude:"true"`
    string Id = 2;
    string UserId = 3;
    string ProjectName = 4;
    string ProjectDescription = 5;
    UserDefinedGraphSchema Schema = 6;
}

message UserDefinedGraphSchema {
    repeated CustomType CustomTypes = 1;
    repeated CustomResolver CustomResolvers = 2;
}

message CustomType {
    string Name = 1;
    repeated FieldInfo Fields = 2;
    repeated ConnectionType ConnectionTypes = 3;
}

message CustomResolver {
    string Id = 1;
    string Name = 2;
    CustomResolverRequestType Request = 3;
    CustomResolverResponseType Response = 4;
}

message FieldInfo {
    string Name = 1;
    string Type = 2;
    bool Required = 3;
    repeated FieldInfo Fields = 4;
}

message ConnectionType {
    string Type = 1;
    string Document = 2;
    string Relation = 3;
}

message CustomResolverRequestType {
    string Type = 1;
    string Document = 2;
    repeated FieldInfo Params = 3;
}

message CustomResolverResponseType {
    string Type = 1;
    string Document = 2;
    string Relation = 3;
}
